Fix spacing...

--- a/style.css
+++ b/style.css
@@ -32,5 +32,5 @@ img {
 }
 
 .spacer {
-    margin-left: 35px;
+    margin-left: 55px;
 }
